--- a/index.html
+++ b/index.html
@@ -1,94 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Andrew Silva – Telecom Design & Ops</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 0;
-      padding: 0;
-      background: #f9f9f9;
-      color: #333;
-    }
-    .container {
-      max-width: 800px;
-      margin: auto;
-      padding: 2rem;
-      background: white;
-    }
-    h1, h2 {
-      color: #1a1a1a;
-    }
-    h1 {
-      font-size: 2rem;
-    }
-    .section {
-      margin-bottom: 2rem;
-    }
-    .project {
-      margin-bottom: 1rem;
-    }
-    .project-title {
-      font-weight: bold;
-    }
-    a {
-      color: #0056b3;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    .footer {
-      text-align: center;
-      font-size: 0.9rem;
-      color: #777;
-      margin-top: 2rem;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1>Andrew Silva</h1>
-    <p><strong>Telecom Design Engineer | Operations-Minded Leader | Future COO</strong></p>
-    <p>I design scalable telecom infrastructure, improve internal processes, and lead cross-functional collaboration with a long-term vision of executive operations leadership.</p>
+<!DOCTYPE HTML>
+<!--
+	Eventually by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Eventually by HTML5 UP</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body class="is-preload">
 
-    <div class="section">
-      <h2>🏗️ Notable Achievements</h2>
-      <div class="project">
-        <div class="project-title">Fiber Infrastructure – 20,000 Home FTTH Deployment</div>
-        <p>Designed and coordinated a full-scale fiber rollout, reducing long-term OSP maintenance costs by 30% through optimized routing and GIS-layer integration.</p>
-      </div>
-      <div class="project">
-        <div class="project-title">Process Optimization – 40% Faster Permitting</div>
-        <p>Built new internal workflows between design and permitting, cutting delays by 40% and accelerating project timelines across multiple cities.</p>
-      </div>
-      <div class="project">
-        <div class="project-title">Multi-Utility Design Integration</div>
-        <p>Led the integration of telecom with water, gas, and electric design data in CAD/GIS, improving cross-discipline coordination and avoiding costly redesigns.</p>
-      </div>
-      <div class="project">
-        <div class="project-title">Engineering to Ops Transition Planning</div>
-        <p>Created standard operating procedures (SOPs) for transitioning design packages to construction and operations, paving the way for a leadership role in delivery efficiency.</p>
-      </div>
-    </div>
+		<!-- Header -->
+			<header id="header">
+				<h1>Eventually</h1>
+				<p>A simple template for telling the world when you'll launch<br />
+				your next big thing. Brought to you by <a href="http://html5up.net">HTML5 UP</a>.</p>
+			</header>
 
-    <div class="section">
-      <h2>📈 Future Vision</h2>
-      <p>I’m pursuing a path from systems-level engineering to operations leadership. My goal is to drive operational excellence, cross-team alignment, and long-term infrastructure strategy as a future Chief Operating Officer.</p>
-    </div>
+		<!-- Signup Form -->
+			<form id="signup-form" method="post" action="#">
+				<input type="email" name="email" id="email" placeholder="Email Address" />
+				<input type="submit" value="Sign Up" />
+			</form>
 
-    <div class="section">
-      <h2>📬 Contact</h2>
-      <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a><br>
-         LinkedIn: <a href="https://linkedin.com/in/yourname" target="_blank">linkedin.com/in/yourname</a></p>
-    </div>
+		<!-- Footer -->
+			<footer id="footer">
+				<ul class="icons">
+					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; Untitled.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
+			</footer>
 
-    <div class="footer">
-      &copy; 2025 Andrew Silva
-    </div>
-  </div>
-</body>
+		<!-- Scripts -->
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
