--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<!-- Header -->
 			<header id="header">
 				<h1>Andrew Silva's Portfolio</h1>
-				<p>A simple template for telling the world when you'll launch<br />
-				your next big thing. Brought to you by <a href="http://html5up.net">HTML5 UP</a>.</p>
+				<p>I'm a telecom engineer building future-ready networks and systems.
+					 Here's a look at what I've created and where I’m headed.</p>
 			</header>
 			
 		<!-- About -->
