--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-			<header id="header">
+			<header id="header" class="main-header">
 				<h1>Andrew Silva's Portfolio</h1>
 				<p>I'm a telecom engineer building future-ready networks and systems.
 					 Here's a look at what I've created and where I’m headed.</p>
