--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
 		<!-- Header -->
 			<header id="header" class="main-header">
 				<h1>Andrew Silva's Portfolio</h1>
-				<p>I'm a telecom engineer building future-ready networks and systems.
-					 Here's a look at what I've created and where I’m headed.</p>
 			</header>
 			
 		<!-- About -->
@@ -26,6 +24,15 @@
 		Telecom Engineer | Future COO<br />
 		Focused on Infrastructure, Innovation & Leadership.
 				</p>
+			</section>
+		<!-- Projets -->
+			<section id="projects">
+				<h2>Projects</h2>
+ 					 <ul>
+    					<li><strong>Telecom System Upgrade</strong> – Led design and implementation of fiber layout for multi-site upgrade in 2024.</li>
+    					<li><strong>OSP Planning Tool</strong> – Created an AutoCAD/GIS process that reduced design time by 30%.</li>
+    					<li><strong>Cross-Utility Integration</strong> – Worked with electrical teams to pilot joint-trench planning in dense urban areas.</li>
+  					</ul>
 			</section>
 
 		<!-- Footer -->
