--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
 				.card {
 					position: relative;
 					width: 300px;
+					height: 400px;
+					background: #1a1a1a;
+					color: #fff; 
 					border-radius: 10px;
 					overflow: hidden;
 					box-shadow: 0 5px 15px rgba(0,0,0,0.1);
@@ -83,11 +86,13 @@
 				}
 
 				.card img {
+					height: 60%;
 					width: 100%;
 					display: block;
 				}
 
 				.card-content {
+					height: 40%;
 					background: #fff;
 					padding: 1em;
 					position: absolute;
