--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Eventually by HTML5 UP</title>
+		<title>Andrew Silva Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -14,9 +14,11 @@
 	<body class="is-preload">
 
 		<!-- Header -->
+		 <div class="top-header-border "
 			<header id="header" class="main-header">
 				<h1>Andrew Silva's Portfolio</h1>
 			</header>
+		 </div>
 			
 		<!-- About -->
 			<section id="about">
