--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 			</header>
 		 </div>
 			
+		 <div class="content"
 		<!-- About -->
+		</div>
 			<section id="about">
 				<p style="font-size: 1.2em;">
 		Telecom Engineer | Future COO<br />
