--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 		 <div class="top-header-border "
 			<header id="header" class="main-header">
-				<h1>Andrew Silva's Portfolio</h1>
+				<h1>ANDREW SILVA</h1>
 			</header>
 		 </div>
 			
@@ -24,11 +24,25 @@
 		<!-- About -->
 		</div>
 			<section id="about">
-				<p style="font-size: 1.2em;">
+				<p style="font-size: .5em;">
 		Telecom Engineer | Future COO<br />
 		Focused on Infrastructure, Innovation & Leadership.
 				</p>
 			</section>
+
+		<!-- Certs -->
+			<section id="certifications" class="cert-section">
+			<div class="cert-card">
+				<h2 class="cert-title"><span id="typed-text"></span><span id="wave">~</span></h2>
+				<ul class="cert-list">
+				<li>Google Fiber Planning Certification</li>
+				<li>AutoCAD Design Badge (Telecom Focus)</li>
+				<li>MuleSoft Developer Foundations</li>
+				</ul>
+			</div>
+			</section>
+
+
 		<!-- Projets -->
 			<section id="projects" class="project-section">
 				<h2>Projects</h2>
