--- a/index.html
+++ b/index.html
@@ -30,19 +30,6 @@
 				</p>
 			</section>
 
-		<!-- Certs -->
-			<section id="certifications" class="cert-section">
-			<div class="cert-card">
-				<h2 class="cert-title"><span id="typed-text"></span><span id="wave">~</span></h2>
-				<ul class="cert-list">
-				<li>Google Fiber Planning Certification</li>
-				<li>AutoCAD Design Badge (Telecom Focus)</li>
-				<li>MuleSoft Developer Foundations</li>
-				</ul>
-			</div>
-			</section>
-
-
 		<!-- Projets -->
 			<section id="projects" class="project-section">
 				<h2>Projects</h2>
@@ -125,6 +112,15 @@
 				}
 				</style>
 
+		<!-- Certs -->
+			<section id="certifications">
+			<h2 id="animated"></h2>
+			<ul class="cert-list" id="cert-list">
+				<li>Google Fiber Planning Certification</li>
+				<li>AutoCAD Design Badge (Telecom Focus)</li>
+				<li>MuleSoft Developer Foundations</li>
+			</ul>
+			</section>
 
 		<!-- Footer -->
 			<footer id="footer">
