--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-		 <div class="top-header-border "
-			<header id="header" class="main-header">
-				<h1>ANDREW SILVA</h1>
+
+		 <div class="top-header-border">
+			<header class="main-header">
+				<div class="header-left">Andrew Silva</div>
+				<div class="header-right">Telecom Engineer</div>
 			</header>
-		 </div>
-			
-		 <div class="content"
-		<!-- About -->
 		</div>
+
+	
+		<!-- About -->
 			<section id="about">
-				<p style="font-size: .5em;">
+				<p style="font-size: 2em;">
 		Telecom Engineer | Future COO<br />
 		Focused on Infrastructure, Innovation & Leadership.
 				</p>
