--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
 
 	
 		<!-- About -->
-			<section id="about">
-				<p style="font-size: 2em;">
-		Telecom Engineer | Future COO<br />
+			<section id="About">
+				<p style="font-size: 1em;">
 		Focused on Infrastructure, Innovation & Leadership.
 				</p>
 			</section>
@@ -125,12 +124,6 @@
 
 		<!-- Footer -->
 			<footer id="footer">
-				<ul class="icons">
-					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
-				</ul>
 				<ul class="copyright">
 					<li>&copy; Untitled.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
