--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 				</p>
 			</section>
 
-		<!-- Projets -->
+		<!-- Main Section -->
+		 <div class="main-section">
+			
+			<!-- Projets -->
 			<section id="projects" class="project-section">
 				<h2>Projects</h2>
 				<div class="card-container">
@@ -111,16 +114,18 @@
 					bottom: 0;
 				}
 				</style>
-
-		<!-- Certs -->
-			<section id="certifications">
-			<h2 id="animated"></h2>
-			<ul class="cert-list" id="cert-list">
-				<li>Google Fiber Planning Certification</li>
-				<li>AutoCAD Design Badge (Telecom Focus)</li>
-				<li>MuleSoft Developer Foundations</li>
-			</ul>
 			</section>
+		 
+			<!-- Certs -->
+				<section id="certifications">
+				<h2 id="animated"></h2>
+				<ul class="cert-list" id="cert-list">
+					<li>Google Fiber Planning Certification</li>
+					<li>AutoCAD Design Badge (Telecom Focus)</li>
+					<li>MuleSoft Developer Foundations</li>
+				</ul>
+				</section>
+		 </div>
 
 		<!-- Footer -->
 			<footer id="footer">
