--- a/index.html
+++ b/index.html
@@ -17,22 +17,13 @@
 
 		 <div class="top-header-border">
 			<header class="main-header">
-				<div class="header-left">Andrew Silva</div>
-				<div class="header-right">Telecom Engineer</div>
+				<div class="header-left">Andrew Silva|Telecom Engineer</div>
 			</header>
 		</div>
 
-	
-		<!-- About -->
-			<section id="About">
-				<p style="font-size: 1em;">
-		Focused on Infrastructure, Innovation & Leadership.
-				</p>
-			</section>
-
 		<!-- Main Section -->
 		 <div class="main-section">
-			
+
 			<!-- Projets -->
 			<section id="projects" class="project-section">
 				<h2>Projects</h2>
@@ -116,24 +107,6 @@
 				</style>
 			</section>
 		 
-			<!-- Certs -->
-				<section id="certifications">
-				<h2 id="animated"></h2>
-				<ul class="cert-list" id="cert-list">
-					<li>Google Fiber Planning Certification</li>
-					<li>AutoCAD Design Badge (Telecom Focus)</li>
-					<li>MuleSoft Developer Foundations</li>
-				</ul>
-				</section>
-		 </div>
-
-		<!-- Footer -->
-			<footer id="footer">
-				<ul class="copyright">
-					<li>&copy; Untitled.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</footer>
-
 		<!-- Scripts -->
 			<script src="assets/js/main.js"></script>
 
