--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		 <div class="top-header-border">
 			<header class="main-header">
-				<div class="header-left">Andrew Silva | Telecom Engineer</div>
+				<div class="header-left">Andrew Silva&nbsp;|&nbsp;Telecom Engineer</div>
 			</header>
 		</div>
 
