--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
 
 		 <div class="top-header-border">
 			<header class="main-header">
-				<div class="header-left">Andrew Silva&nbsp;|&nbsp;Telecom Engineer</div>
+				<div class="header-left content">
+				<h1 class="title">Andrew Silva | Telecom Engineer</h1>
+				<div class="aurora">
+					<div class="aurora__item"></div>
+					<div class="aurora__item"></div>
+					<div class="aurora__item"></div>
+					<div class="aurora__item"></div>
+				</div>
+				</div>
 			</header>
 		</div>
 
