--- a/index.html
+++ b/index.html
@@ -106,6 +106,19 @@
 				}
 				</style>
 			</section>
+
+			<!-- Certifications -->
+			<section id="certifications" class="cert-section">
+			<h2>Certifications</h2>
+			<ul class="cert-list">
+				<li>Fiber Optic Technician – FOA</li>
+				<li>AutoCAD Electrical Fundamentals</li>
+				<li>Esri ArcGIS Pro User</li>
+				<li>CPUC JUT Qualification (California)</li>
+			</ul>
+			</section>
+
+
 		 
 		<!-- Scripts -->
 			<script src="assets/js/main.js"></script>
