--- a/index.html
+++ b/index.html
@@ -118,6 +118,20 @@
 			</ul>
 			</section>
 
+		<!-- Contact + Links Section -->
+		<footer id="contact-footer">
+		<div class="contact-container">
+			<a href="https://www.linkedin.com/in/your-username" target="_blank" class="contact-button">
+			LinkedIn
+			</a>
+			<a href="mailto:youremail@example.com" class="contact-button">
+			Email Me
+			</a>
+			<a href="assets/resume.pdf" download class="contact-button">
+			Download Résumé
+			</a>
+		</div>
+		</footer>
 
 		 
 		<!-- Scripts -->
