--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-
-		 <div class="top-header-border">
 			<header class="main-header">
 				<div class="header-left">Andrew Silva&nbsp;|&nbsp;Telecom Engineer</div>
+				<div class="header-links">
+					<a href="https://www.linkedin.com/in/your-username" target="_blank">LinkedIn</a>
+					<a href="mailto:youremail@example.com">Email</a>
+					<a href="assets/resume.pdf" download>Résumé</a>
+				</div>
 			</header>
-		</div>
 
 		<!-- Main Section -->
 		 <div class="main-section">
@@ -118,22 +120,6 @@
 			</ul>
 			</section>
 
-		<!-- Contact + Links Section -->
-		<footer id="contact-footer">
-		<div class="contact-container">
-			<a href="https://www.linkedin.com/in/your-username" target="_blank" class="contact-button">
-			LinkedIn
-			</a>
-			<a href="mailto:youremail@example.com" class="contact-button">
-			Email Me
-			</a>
-			<a href="assets/resume.pdf" download class="contact-button">
-			Download Résumé
-			</a>
-		</div>
-		</footer>
-
-		 
 		<!-- Scripts -->
 			<script src="assets/js/main.js"></script>
 
