--- a/index.html
+++ b/index.html
@@ -120,6 +120,15 @@
 			</ul>
 			</section>
 
+			<!-- Portrait -->
+
+			<div class="portrait-wrapper">
+			<div class="chevron">
+				<img src="C:\Users\andre\Downloads\Andrew's Webpage\images" alt="Portrait of Andrew Silva">
+			</div>
+			</div>
+
+
 		<!-- Scripts -->
 			<script src="assets/js/main.js"></script>
 
