--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
 		<!-- Main Section -->
 		 <div class="main-section">
 
+
+			<!-- Portrait -->
+
+			<div class="portrait-wrapper">
+			<div class="chevron">
+				<img src="images/Andrew Headshot.png" alt="Portrait of Andrew Silva">
+			</div>
+			</div>
+
 			<!-- Projets -->
 			<section id="projects" class="project-section">
 				<h2>Projects</h2>
@@ -120,13 +129,6 @@
 			</ul>
 			</section>
 
-			<!-- Portrait -->
-
-			<div class="portrait-wrapper">
-			<div class="chevron">
-				<img src="C:\Users\andre\Downloads\Andrew's Webpage\images" alt="Portrait of Andrew Silva">
-			</div>
-			</div>
 
 
 		<!-- Scripts -->
