--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
 		<!-- Main Section -->
 		 <div class="main-section">
 
+			<!-- Bio Section -->
+
+			<section id="bio" class="bio-section">
+			<div class="bio-box">
+				<h2>About Me</h2>
+				<p>
+				I’m a telecom engineer with 3 years of experience designing and improving fiber networks across diverse environments. I specialize in Outside Plant (OSP) design, GIS integration, and building tools that make engineering teams more efficient.
+				</p>
+				<p>
+				My background blends technical expertise with a focus on practical problem-solving — from leading multi-site fiber upgrades to reducing design time by 30% with GIS and AutoCAD automation. I enjoy taking complex workflows and turning them into scalable, reliable systems that help teams move faster.
+				</p>
+				<p>
+				As I grow in my career, I’m drawn to roles that combine engineering with leadership — helping teams adopt smarter tools, work more collaboratively, and deliver quality infrastructure. If you're looking for someone who understands both the technology and the people behind it, I’d love to connect.
+				</p>
+			</div>
+			</section>
 
 			<!-- Portrait -->
 
