--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 				</g>
 
 				<!-- Lines going out -->
-				<line id="line-left" x1="500" y1="200" x2="50" y2="350" stroke="#1cb495" stroke-width="2" />
-				<line id="line-up" x1="500" y1="200" x2="200" y2="150" stroke="#1cb495" stroke-width="2" />
-				<line id="line-right" x1="500" y1="200" x2="350" y2="350" stroke="#1cb495" stroke-width="2" />
+				<line id="line-left" x1="50%" y1="50%" x2="25%" y2="50%" stroke="#1cb495" stroke-width="2" />
+				<line id="line-up" x1="50%" y1="50%" x2="50%" y2="20%" stroke="#1cb495" stroke-width="2" />
+				<line id="line-right" x1="50%" y1="50%" x2="75%" y2="50%" stroke="#1cb495" stroke-width="2" />
 
 				<!-- Destination Icons -->
 				<g id="real-estate" transform="translate(30, 300)">
