--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 	<body class="is-preload">
 
 		<!-- Preloader -->
+
 			<div id="preloader">
-			<svg id="preloader-svg" viewBox="0 0 1200 800" width="100%" height="100%">
+			<svg id="preloader-svg" viewBox="0 0 1685 835" width="100%" height="100%">
 
 				<!-- Lines going out -->
+
 				<line id="line-left" x1="50%" y1="50%" x2="25%" y2="50%" stroke="#1cb495" stroke-width="2" />
 				<line id="line-up" x1="50%" y1="50%" x2="50%" y2="20%" stroke="#1cb495" stroke-width="2" />
 				<line id="line-right" x1="50%" y1="50%" x2="75%" y2="50%" stroke="#1cb495" stroke-width="2" />
@@ -26,6 +28,7 @@
 			</div>
 
 		<!-- Header -->
+
 			<header class="main-header">
 				<div class="header-left">Andrew Silva&nbsp;|&nbsp;Telecom Engineer</div>
 				<div class="header-links">
@@ -36,7 +39,26 @@
 			</header>
 
 		<!-- Main Section -->
+
 		 <div class="main-section">
+
+			<!-- Portrait -->
+
+			<div class="portrait-wrapper">
+			<div class="chevron">
+				<img src="images/HLD EX.png" alt="HLD EX ">
+			</div>
+			<div class="chevron">
+				<img src="images/Andrew Headshot.png" alt="ANDREW SILVA PHOTO">
+			</div>
+			<div class="chevron">
+				<img src="images/CAD Cabinet.png" alt="DRAWING OF CAB IN AUTOCAD">
+			</div>
+			<div class="chevron">
+				<img src="images/Field Cabinet.jpg" alt="FIELD INSTALATION OF CAB">
+			</div>
+		</div>
+
 
 			<!-- Bio Section -->
 
@@ -55,15 +77,8 @@
 			</div>
 			</section>
 
-			<!-- Portrait -->
-
-			<div class="portrait-wrapper">
-			<div class="chevron">
-				<img src="images/Andrew Headshot.png" alt="Portrait of Andrew Silva">
-			</div>
-			</div>
-
 			<!-- Projets -->
+
 			<section id="projects" class="project-section">
 				<h2>Projects</h2>
 				<div class="card-container">
@@ -147,6 +162,7 @@
 			</section>
 
 			<!-- Certifications -->
+
 			<section id="certifications" class="cert-section">
 			<h2>Certifications</h2>
 			<ul class="cert-list">
@@ -160,6 +176,7 @@
 
 
 		<!-- Scripts -->
+
 			<script src="assets/js/main.js"></script>
 
 	</body>
