--- a/index.html
+++ b/index.html
@@ -13,20 +13,6 @@
 	</head>
 	<body class="is-preload">
 
-		<!-- Preloader -->
-
-			<div id="preloader">
-			<svg id="preloader-svg" viewBox="0 0 1200 800" width="100%" height="100%">
-
-				<!-- Lines going out -->
-
-				<line id="line-left" x1="50%" y1="50%" x2="25%" y2="50%" stroke="#1cb495" stroke-width="2" />
-				<line id="line-up" x1="50%" y1="50%" x2="50%" y2="20%" stroke="#1cb495" stroke-width="2" />
-				<line id="line-right" x1="50%" y1="50%" x2="75%" y2="50%" stroke="#1cb495" stroke-width="2" />
-				</g>
-			</svg>
-			</div>
-
 		<!-- Header -->
 
 			<header class="main-header">
@@ -42,37 +28,33 @@
 
 		 <div class="main-section">
 
-			<!-- Portrait -->
-
-		<div class="portrait-wrapper">
-			<div class="chevron">
-				<img src="images/HLD EX.png" alt="HLD EX ">
-			</div>
-			<div class="chevron">
+		<!-- Portraits and Bio in Flex -->
+			<section class="intro-flex-wrapper">
+			<div class="portrait-wrapper">
+				<div class="chevron">
+				<img src="images/HLD EX.png" alt="HLD EX">
+				</div>
+				<div class="chevron">
 				<img src="images/Andrew Headshot.png" alt="ANDREW SILVA PHOTO">
-			</div>
-			<div class="chevron">
+				</div>
+				<div class="chevron">
 				<img src="images/CAD Cabinet.png" alt="DRAWING OF CAB IN AUTOCAD">
+				</div>
+				<div class="chevron">
+				<img src="images/Field Cabinet.jpg" alt="FIELD INSTALLATION OF CAB">
+				</div>
 			</div>
-			<div class="chevron">
-				<img src="images/Field Cabinet.jpg" alt="FIELD INSTALATION OF CAB">
-			</div>
-		</div>
 
-
-			<!-- Bio Section -->
-
-			<section id="bio" class="bio-section">
 			<div class="bio-box">
 				<h2>About Me</h2>
 				<p>
-				I’m a telecom engineer with 3 years of experience designing and improving fiber networks across diverse environments. I specialize in Outside Plant (OSP) design, GIS integration, and building tools that make engineering teams more efficient.
+				I’m a telecom engineer with 3 years of experience designing and improving fiber networks across diverse environments...
 				</p>
 				<p>
-				My background blends technical expertise with a focus on practical problem-solving — from leading multi-site fiber upgrades to reducing design time by 30% with GIS and AutoCAD automation. I enjoy taking complex workflows and turning them into scalable, reliable systems that help teams move faster.
+				My background blends technical expertise with a focus on practical problem-solving...
 				</p>
 				<p>
-				As I grow in my career, I’m drawn to roles that combine engineering with leadership — helping teams adopt smarter tools, work more collaboratively, and deliver quality infrastructure. If you're looking for someone who understands both the technology and the people behind it, I’d love to connect.
+				As I grow in my career, I’m drawn to roles that combine engineering with leadership...
 				</p>
 			</div>
 			</section>
@@ -117,7 +99,7 @@
 				.card-container {
 					display: flex;
 					flex-wrap: wrap;
-					justify-content: center;
+					justify-content: right;
 					gap: 2em;
 					margin-top: 2em;
 				}
