--- a/index.html
+++ b/index.html
@@ -28,138 +28,5 @@
 
 		 <div class="main-section">
 
-		<!-- Portraits and Bio in Flex -->
-			<section class="intro-flex-wrapper">
-			<div class="portrait-wrapper">
-				<div class="chevron">
-				<img src="images/HLD EX.png" alt="HLD EX">
-				</div>
-				<div class="chevron">
-				<img src="images/Andrew Headshot.png" alt="ANDREW SILVA PHOTO">
-				</div>
-				<div class="chevron">
-				<img src="images/CAD Cabinet.png" alt="DRAWING OF CAB IN AUTOCAD">
-				</div>
-				<div class="chevron">
-				<img src="images/Field Cabinet.jpg" alt="FIELD INSTALLATION OF CAB">
-				</div>
-			</div>
-
-			<div class="bio-box">
-				<h2>About Me</h2>
-				<p>
-				I’m a telecom engineer with 3 years of experience designing and improving fiber networks across diverse environments...
-				</p>
-				<p>
-				My background blends technical expertise with a focus on practical problem-solving...
-				</p>
-				<p>
-				As I grow in my career, I’m drawn to roles that combine engineering with leadership...
-				</p>
-			</div>
-			</section>
-
-			<!-- Projets -->
-
-			<section id="projects" class="project-section">
-				<h2>Projects</h2>
-				<div class="card-container">
-					<div class="card">
-					<img src="images/project1.jpg" alt="Telecom System Upgrade">
-					<div class="card-content">
-						<h3>Telecom System Upgrade</h3>
-						<p>Led fiber design and implementation across multi-site network (2024).</p>
-					</div>
-					</div>
-
-					<div class="card">
-					<img src="images/project2.jpg" alt="OSP Planning Tool">
-					<div class="card-content">
-						<h3>OSP Planning Tool</h3>
-						<p>Reduced design time 30% using GIS/AutoCAD hybrid workflow.</p>
-					</div>
-					</div>
-
-					<div class="card">
-					<img src="images/project3.jpg" alt="Cross-Utility Integration">
-					<div class="card-content">
-						<h3>Cross-Utility Integration</h3>
-						<p>Piloted joint-trench coordination for telecom/electric planning.</p>
-					</div>
-					</div>
-				</div>
-				</section>
-
-				<style>
-				.project-section {
-					text-align: center;
-					padding: 4em 2em;
-				}
-
-				.card-container {
-					display: flex;
-					flex-wrap: wrap;
-					justify-content: right;
-					gap: 2em;
-					margin-top: 2em;
-				}
-
-				.card {
-					position: relative;
-					width: 300px;
-					height: 400px;
-					background: #1a1a1a;
-					color: #fff; 
-					border-radius: 10px;
-					overflow: hidden;
-					box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-					transition: transform 0.3s;
-				}
-
-				.card:hover {
-					transform: translateY(-10px);
-				}
-
-				.card img {
-					height: 60%;
-					width: 100%;
-					display: block;
-				}
-
-				.card-content {
-					height: 40%;
-					background: #fff;
-					padding: 1em;
-					position: absolute;
-					bottom: -100%;
-					left: 0;
-					right: 0;
-					transition: bottom 0.3s ease-in-out;
-				}
-
-				.card:hover .card-content {
-					bottom: 0;
-				}
-				</style>
-			</section>
-
-			<!-- Certifications -->
-
-			<section id="certifications" class="cert-section">
-			<h2>Certifications</h2>
-			<ul class="cert-list">
-				<li>Fiber Optic Technician – FOA</li>
-				<li>AutoCAD Electrical Fundamentals</li>
-				<li>Esri ArcGIS Pro User</li>
-				<li>CPUC JUT Qualification (California)</li>
-			</ul>
-			</section>
-
-
-
-		<!-- Scripts -->
-
-			<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
+<div class="background-layer"></div>
+<div class="background-overlay"></div>
