--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
 				</div>
 			</header>
 
+			<div id="background-wrapper">
+			<div class="bg-layer bg01"></div>
+			<div class="bg-layer bg02"></div>
+			<div class="bg-layer bg03"></div>
+			</div>
+
+
 		<!-- Main Section -->
 
 		 <div class="main-section">
