--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 	</head>
 	<body class="is-preload">
 
+		<!-- Background Image Layers -->
+		<div id="background-wrapper">
+			<div class="bg-layer bg01"></div>
+			<div class="bg-layer bg02"></div>
+			<div class="bg-layer bg03"></div>
+		</div>
+
 		<!-- Header -->
 
 			<header class="main-header">
@@ -24,16 +31,7 @@
 				</div>
 			</header>
 
-			<div id="background-wrapper">
-			<div class="bg-layer bg01"></div>
-			<div class="bg-layer bg02"></div>
-			<div class="bg-layer bg03"></div>
-			</div>
-
-
 		<!-- Main Section -->
 
 		 <div class="main-section">
 
-<div class="background-layer"></div>
-<div class="background-overlay"></div>
