--- a/index.html
+++ b/index.html
@@ -14,20 +14,13 @@
 
 	<body class="is-preload">
 
-		<!-- Background Image Layers -->
-			<div id="background-wrapper">
-				<div class="bg-layer bg01"></div>
-				<div class="bg-layer bg02"></div>
-				<div class="bg-layer bg03"></div>
-			</div>
-
 		<!-- Header -->
 
 			<header class="main-header">
 				<div class="header-left">Andrew Silva&nbsp;|&nbsp;Telecom Engineer</div>
 				<div class="header-links">
-					<a href="https://www.linkedin.com/in/your-username" target="_blank">LinkedIn</a>
-					<a href="mailto:youremail@example.com">Email</a>
+					<a href="https://www.linkedin.com/in/andrew-silva2/" target="_blank">LinkedIn</a>
+					<a href="mailto:andrew03silva@yahoo.com">Email</a>
 					<a href="assets/resume.pdf" download>Résumé</a>
 				</div>
 			</header>
