--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
 
 		<!-- Main Section -->
 
-		 <div class="main-section">
+		 <div class="headshot-circle">
+			<img src="/images/Andrew Headshot.png" alt="Andrew Silva headshot">
+		</div>
+
 
