--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<!-- Main Section -->
 
 		 <div class="headshot-circle">
-			<img src="/images/Andrew Headshot.png" alt="Andrew Silva headshot">
+			<img src="../Andrew's Webpage/images/Andrew Headshot.png" alt="Andrew Silva headshot">
 		</div>
 
 
